--- a/packages/admin-ui/src/lib/core/src/shared/dynamic-form-inputs/code-editor-form-input/json-editor-form-input.component.scss
+++ b/packages/admin-ui/src/lib/core/src/shared/dynamic-form-inputs/code-editor-form-input/json-editor-form-input.component.scss
@@ -12,6 +12,9 @@
     height: 340px;
     letter-spacing: normal;
     line-height: 20px;
+    resize: both;
+    text-align: initial;
+    min-width: 200px;
 
     &:focus {
         border-color: var(--color-primary-500);
