--- a/packages/admin-ui/src/lib/customer/src/components/customer-group-detail-dialog/customer-group-detail-dialog.component.html
+++ b/packages/admin-ui/src/lib/customer/src/components/customer-group-detail-dialog/customer-group-detail-dialog.component.html
@@ -13,14 +13,11 @@
     </vdr-form-field>
     <section formGroupName="customFields" *ngIf="customFields.length">
         <label>{{ 'common.custom-fields' | translate }}</label>
-        <ng-container *ngFor="let customField of customFields">
-            <vdr-custom-field-control
-                *ngIf="customField.name"
-                entityName="CustomerGroup"
-                [customFieldsFormGroup]="form.get(['customFields'])"
-                [customField]="customField"
-            ></vdr-custom-field-control>
-        </ng-container>
+        <vdr-tabbed-custom-fields
+            entityName="CustomerGroup"
+            [customFields]="customFields"
+            [customFieldsFormGroup]="form.get('customFields')"
+        ></vdr-tabbed-custom-fields>
     </section>
 </form>
 <ng-template vdrDialogButtons>
