feat(admin-ui): Allow custom components to embed in detail views
Relates to #415

--- a/packages/admin-ui/src/lib/catalog/src/components/collection-detail/collection-detail.component.html
+++ b/packages/admin-ui/src/lib/catalog/src/components/collection-detail/collection-detail.component.html
@@ -86,6 +86,11 @@
                     [readonly]="!(updatePermission | hasPermission)"
                 ></vdr-tabbed-custom-fields>
             </section>
+            <vdr-custom-detail-component-host
+                locationId="collection-detail"
+                [entity$]="entity$"
+                [detailForm]="detailForm"
+            ></vdr-custom-detail-component-host>
         </div>
         <div class="clr-col-md-auto">
             <vdr-product-assets
