--- a/packages/admin-ui/src/lib/core/src/shared/components/ui-extension-point/ui-extension-point.component.html
+++ b/packages/admin-ui/src/lib/core/src/shared/components/ui-extension-point/ui-extension-point.component.html
@@ -22,6 +22,11 @@ addNavMenuItem({{ '{' }}
   {{ '}' }},
   '{{ locationId }}'
 )</pre>
+                <pre *ngIf="api === 'detailComponent'">
+registerCustomDetailComponent({{ '{' }}
+  locationId: '{{ locationId }}',
+  component: MyCustomComponent,
+{{ '}' }})</pre>
             </div>
         </vdr-dropdown-menu>
     </vdr-dropdown>
