--- a/packages/admin-ui/src/lib/settings/src/components/country-detail/country-detail.component.html
+++ b/packages/admin-ui/src/lib/settings/src/components/country-detail/country-detail.component.html
@@ -68,4 +68,9 @@
             [readonly]="!(updatePermission | hasPermission)"
         ></vdr-tabbed-custom-fields>
     </section>
+    <vdr-custom-detail-component-host
+        locationId="country-detail"
+        [entity$]="entity$"
+        [detailForm]="detailForm"
+    ></vdr-custom-detail-component-host>
 </form>
