--- a/packages/admin-ui/src/lib/settings/src/components/tax-rate-detail/tax-rate-detail.component.html
+++ b/packages/admin-ui/src/lib/settings/src/components/tax-rate-detail/tax-rate-detail.component.html
@@ -88,4 +88,9 @@
             [readonly]="!(updatePermission | hasPermission)"
         ></vdr-tabbed-custom-fields>
     </section>
+    <vdr-custom-detail-component-host
+        locationId="tax-rate-detail"
+        [entity$]="entity$"
+        [detailForm]="detailForm"
+    ></vdr-custom-detail-component-host>
 </form>
