--- a/packages/admin-ui/src/lib/settings/src/components/shipping-method-detail/shipping-method-detail.component.html
+++ b/packages/admin-ui/src/lib/settings/src/components/shipping-method-detail/shipping-method-detail.component.html
@@ -83,6 +83,12 @@
         ></vdr-tabbed-custom-fields>
     </section>
 
+    <vdr-custom-detail-component-host
+        locationId="shipping-method-detail"
+        [entity$]="entity$"
+        [detailForm]="detailForm"
+    ></vdr-custom-detail-component-host>
+
     <div class="clr-row mt4">
         <div class="clr-col">
             <label class="clr-control-label">{{ 'settings.shipping-eligibility-checker' | translate }}</label>
