--- a/src/app/shared/components/sign-in/sign-in.component.html
+++ b/src/app/shared/components/sign-in/sign-in.component.html
@@ -22,7 +22,7 @@
         </div>
 
         <button class="btn btn-primary btn-block mt-3"
-                [disabled]="signInForm.invalid"
+                [disabled]="signInForm.invalid || signInForm.pristine"
                 type="submit">
             Sign In
         </button>
