--- a/src/app/shared/components/sign-in/sign-in.component.scss
+++ b/src/app/shared/components/sign-in/sign-in.component.scss
@@ -10,8 +10,13 @@
     opacity: 0;
     transition: opacity 0.3s;
 
+
     &.visible {
         opacity: 1;
+        animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
+        transform: translate3d(0, 0, 0);
+        backface-visibility: hidden;
+        perspective: 1000px;
     }
 }
 
@@ -19,3 +24,20 @@
     margin-top: $spacer;
 }
 
+@keyframes shake {
+    10%, 90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+
+    20%, 80% {
+        transform: translate3d(2px, 0, 0);
+    }
+
+    30%, 50%, 70% {
+        transform: translate3d(-4px, 0, 0);
+    }
+
+    40%, 60% {
+        transform: translate3d(4px, 0, 0);
+    }
+}
