feat(core): added ngx translate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,12 +27,12 @@
     <vsf-layout-footer>
         <div class="row text-muted mt-5 mb-5">
             <div class="col-md-3 text-center text-md-left">
-                <h3>Orders</h3>
+                <h3>{{ 'global.orders' | translate }}</h3>
                 <ul class="list-unstyled">
-                    <li>Shipping</li>
-                    <li>Track My Order</li>
-                    <li>Terms & Conditions</li>
-                    <li>Returns Policy</li>
+                    <li>{{ 'global.shipping' | translate }}</li>
+                    <li>{{ 'global.track-my-order' | translate }}</li>
+                    <li>{{ 'global.terms-and-condition' | translate }}</li>
+                    <li>{{ 'global.returns-policy' | translate }}</li>
                 </ul>
             </div>
             <div class="col-md-3 text-center text-md-left">
