--- a/src/app/account/components/account-address-book/account-address-book.component.html
+++ b/src/app/account/components/account-address-book/account-address-book.component.html
@@ -1,9 +1,10 @@
 <div class="card-deck">
-    <vsf-address-card *ngFor="let address of addresses$ | async"
-                      [address]="address">
-        <a class="btn btn-secondary btn-sm"
-           [routerLink]="['./', address.id]">
-            Edit
+    <vsf-address-card
+        *ngFor="let address of addresses$ | async"
+        [address]="address"
+    >
+        <a class="btn btn-secondary btn-sm" [routerLink]="['./', address.id]">
+            {{ "global.edit" | translate }}
         </a>
     </vsf-address-card>
 </div>
