chore: added icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
                     class="logo-link d-none d-md-inline-block"
                 >
                     <img
-                        src="assets/cube-logo-line-icon-nostroke.png"
+                        src="assets/logo.png"
                         class="logo"
-                        alt="Vendure Storefront"
+                        alt="Intelligo Storefront"
                     />
                 </a>
                 <div class="flex-grow-1 d-none d-sm-block"></div>
