--- a/packages/admin-ui/src/lib/core/src/components/main-nav/main-nav.component.scss
+++ b/packages/admin-ui/src/lib/core/src/components/main-nav/main-nav.component.scss
@@ -12,8 +12,11 @@ nav.sidenav {
     border-right-color: var(--clr-sidenav-border-color);
 }
 
-.nav-list clr-icon {
-    margin-right: 12px;
+.nav-list {
+    margin-top: 0.3rem;
+    clr-icon {
+        margin-right: 12px;
+    }
 }
 
 .nav-group,
@@ -27,4 +30,9 @@ nav.sidenav {
 .nav-link vdr-status-badge {
     left: 25px;
     top: 3px;
+}
+
+.nav-group .nav-list,
+.nav-group label {
+    padding: 0 0 0 0.8rem !important;
 }
