--- a/src/app/account/components/account-customer-details/account-customer-details.component.html
+++ b/src/app/account/components/account-customer-details/account-customer-details.component.html
@@ -1,25 +1,47 @@
 <ng-container *ngIf="form">
     <form [formGroup]="form">
         <div class="form-group row">
-            <label for="firstName" class="col-sm-3 col-form-label">First name</label>
+            <label for="firstName" class="col-sm-3 col-form-label">{{
+                "account.firstname" | translate
+            }}</label>
             <div class="col-sm-9">
-                <input class="form-control" formControlName="firstName" id="firstName">
+                <input
+                    class="form-control"
+                    formControlName="firstName"
+                    id="firstName"
+                />
             </div>
         </div>
         <div class="form-group row">
-            <label for="lastName" class="col-sm-3 col-form-label">Last name</label>
+            <label for="lastName" class="col-sm-3 col-form-label">{{
+                "account.lastname" | translate
+            }}</label>
             <div class="col-sm-9">
-                <input class="form-control" formControlName="lastName" id="lastName">
+                <input
+                    class="form-control"
+                    formControlName="lastName"
+                    id="lastName"
+                />
             </div>
         </div>
         <div class="form-group row">
-            <label for="phoneNumber" class="col-sm-3 col-form-label">Phone number</label>
+            <label for="phoneNumber" class="col-sm-3 col-form-label">{{
+                "account.phone-number" | translate
+            }}</label>
             <div class="col-sm-9">
-                <input class="form-control" formControlName="phoneNumber" id="phoneNumber">
+                <input
+                    class="form-control"
+                    formControlName="phoneNumber"
+                    id="phoneNumber"
+                />
             </div>
         </div>
     </form>
-    <button class="btn btn-secondary mt-3"
-            [disabled]="form.invalid || form.pristine"
-            (click)="updateDetails()">Update Details</button>
+    <button
+        class="btn btn-secondary mt-3"
+        [disabled]="form.invalid || form.pristine"
+        (click)="updateDetails()"
+    >
+        {{ "account.update-details" | translate }}
+    </button>
 </ng-container>
