feat: account module implementation

--- a/src/app/account/components/verify/verify.component.html
+++ b/src/app/account/components/verify/verify.component.html
@@ -1,23 +1,27 @@
-<form #verifyForm="ngForm"
-      class="mt-3"
-      (submit)="verify()">
-    <vsf-centered-card title="Almost done!"
-                       subTitle="Now just choose a password to complete the process">
+<form #verifyForm="ngForm" class="mt-3" (submit)="verify()">
+    <vsf-centered-card
+        title="Almost done!"
+        subTitle="Now just choose a password to complete the process"
+    >
         <div class="input-group mb-3">
-            <input class="form-control"
-                   placeholder="Password"
-                   type="password"
-                   name="password"
-                   aria-describedby="button-verify"
-                   required
-                   [(ngModel)]="password">
+            <input
+                class="form-control"
+                placeholder="Password"
+                type="password"
+                name="password"
+                aria-describedby="button-verify"
+                required
+                [(ngModel)]="password"
+            />
 
             <div class="input-group-append">
-                <button class="btn btn-primary"
-                        id="button-verify"
-                        [disabled]="verifyForm.invalid"
-                        type="submit">
-                    Create account
+                <button
+                    class="btn btn-primary"
+                    id="button-verify"
+                    [disabled]="verifyForm.invalid"
+                    type="submit"
+                >
+                    {{ "account.create-account" | translate }}
                 </button>
             </div>
         </div>
