--- a/src/app/account/components/account-order-list/account-order-list.component.html
+++ b/src/app/account/components/account-order-list/account-order-list.component.html
@@ -1,10 +1,10 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">Order code</th>
-        <th scope="col">Status</th>
-        <th scope="col">Total</th>
-        <th scope="col">Last updated</th>
+        <th scope="col">{{ "account.order-code" | translate }}</th>
+        <th scope="col">{{ "account.order-status" | translate }}</th>
+        <th scope="col">{{ "account.order-total" | translate }}</th>
+        <th scope="col">{{ "account.order-last-updated" | translate }}</th>
     </tr>
     </thead>
     <tbody>
