--- a/src/app/account/components/forgotten-password/forgotten-password.component.html
+++ b/src/app/account/components/forgotten-password/forgotten-password.component.html
@@ -1,23 +1,27 @@
-<form #resetForm="ngForm"
-      (submit)="resetPassword()">
+<form #resetForm="ngForm" (submit)="resetPassword()">
     <vsf-centered-card>
         <ng-container *ngIf="!submitted">
-            <input class="form-control"
-                   placeholder="Email address"
-                   name="emailAddress"
-                   type="email"
-                   email
-                   required
-                   [(ngModel)]="emailAddress">
+            <input
+                class="form-control"
+                placeholder="Email address"
+                name="emailAddress"
+                type="email"
+                email
+                required
+                [(ngModel)]="emailAddress"
+            />
 
-            <button class="btn btn-primary btn-block mt-3"
-                    [disabled]="resetForm.invalid || submitted"
-                    type="submit">
-                Reset password
+            <button
+                class="btn btn-primary btn-block mt-3"
+                [disabled]="resetForm.invalid || submitted"
+                type="submit"
+            >
+                {{ "account.reset-password" | translate }}
             </button>
         </ng-container>
         <div class="alert alert-success" role="alert" *ngIf="submitted">
-            An email has been sent to <strong>{{ emailAddress }}</strong>. Please check and follow the included instructions.
+            An email has been sent to <strong>{{ emailAddress }}</strong
+            >. Please check and follow the included instructions.
         </div>
     </vsf-centered-card>
 </form>
