feat: address form and shared components

--- a/src/app/shared/components/address-modal/address-modal.component.html
+++ b/src/app/shared/components/address-modal/address-modal.component.html
@@ -1,10 +1,16 @@
 <ng-template vsfDialogTitle>{{ title }}</ng-template>
-<vsf-address-form #addressFormComponent
-                  [address]="address"
-                  [availableCountries]="availableCountries$ | async"></vsf-address-form>
+<vsf-address-form
+    #addressFormComponent
+    [address]="address"
+    [availableCountries]="availableCountries$ | async"
+></vsf-address-form>
 <ng-template vsfDialogButtons>
-    <button type="button"
-            class="btn btn-primary"
-            [disabled]="addressFormComponent.addressForm.invalid"
-            (click)="save(addressFormComponent.addressForm.value)">Okay</button>
+    <button
+        type="button"
+        class="btn btn-primary"
+        [disabled]="addressFormComponent.addressForm.invalid"
+        (click)="save(addressFormComponent.addressForm.value)"
+    >
+    {{ "global.okey" | translate }}
+    </button>
 </ng-template>
